--- a/src/content/docs/en/index.mdx
+++ b/src/content/docs/en/index.mdx
@@ -91,12 +91,12 @@ LarvixON develops a rapid diagnostic system based on AI that analyzes larval mov
 - Wrocław Supercomputing Center (WCSS) – compute for ML
 - PostgreSQL – system database
 - Docker – containerization
-- TODO – hosting and cloud services
+- Azure – hosting and cloud services
 - Roboflow – video data annotation
 
 ## Project status
 
-The project is currently in phase III: integration and optimization. Work is ongoing to connect all system components and optimize ML models with real data.
+The project was successfully completed and is awaiting an official grade. It ranked fourth place out of 33 projects according to community vote!
 
 ## GitHub Resources
 
