feat: add ZPI documentation and update links in existing documents

--- a/src/content/docs/en/02-university/overview.mdx
+++ b/src/content/docs/en/02-university/overview.mdx
@@ -7,7 +7,8 @@ import { LinkCard } from "@astrojs/starlight/components";
 
 ## Basic information
 
-Considering this is a university and a graded project, we had to create various forms of additional documentation.
+Considering this is a university and a graded project, we had to create various forms of additional documentation, like a poster, report, presentations and more.  
+We were required to create all documentation in Polish.
 
 ## Links
 
@@ -20,8 +21,33 @@ Links to documents according to chronological order
   The core of our project and deliverables timeline
 </LinkCard>
 <LinkCard
-  title="Seminar presentation"
+  title="Seminar presentation - idea"
   href="/larvixon-documentation/en/02-university/documents/seminar-presentation"
 >
   Presentation that explained business and technical sides of LarvixON
+</LinkCard>
+<LinkCard
+  title="Seminar presentation - implementation"
+  href="/larvixon-documentation/en/02-university/documents/seminar-presentation-implementation"
+>
+  Presentation that described the implementation of the LarvixON project
+</LinkCard>
+<LinkCard
+  title="Poster"
+  href="/larvixon-documentation/en/02-university/documents/poster"
+>
+  Project poster presentation
+</LinkCard>
+<LinkCard
+  title="Report"
+  href="/larvixon-documentation/en/02-university/documents/report"
+>
+  Comprehensive written report detailing the LarvixON project implementation and
+  results
+</LinkCard>
+<LinkCard
+  title="ZPI Documentation"
+  href="/larvixon-documentation/en/02-university/documents/documentation"
+>
+  Comprehensive documentation of the LarvixON project
 </LinkCard>
