--- a/src/content/docs/pl/02-university/overview.mdx
+++ b/src/content/docs/pl/02-university/overview.mdx
@@ -7,7 +7,8 @@ import { LinkCard } from "@astrojs/starlight/components";
 
 ## Ogólne informacje
 
-Jako iż jest to projekt studencki na ocenę, różne formy dokumentów były wymagane w różnym czasie.
+Ponieważ ZPI to projekt studencki do oceny, różne formy dokumentów były wymagane w różnym czasie, takie jak plakat, raport, prezentacje i więcej.  
+Wymagane było użycie polskiego do każdej oficjalnej dokumentacji.
 
 ## Linki
 
@@ -20,8 +21,32 @@ Linki do dokumentów zgodnie z kolejnością chronologiczną
   Opis najważniejszych funkcjonalności i harmonogram realizacji
 </LinkCard>
 <LinkCard
-  title="Prezentacja na seminarium"
+  title="Prezentacja seminarium - pomysł"
   href="/larvixon-documentation/pl/02-university/documents/seminar-presentation"
 >
   Prezentacja, która opisała biznesowe i techniczne założenia projektu LarvixON
+</LinkCard>
+<LinkCard
+  title="Prezentacja seminarium - implementacja"
+  href="/larvixon-documentation/pl/02-university/documents/seminar-presentation-implementation"
+>
+  Prezentacja, która opisała implementację projektu LarvixON
+</LinkCard>
+<LinkCard
+  title="Plakat"
+  href="/larvixon-documentation/pl/02-university/documents/poster"
+>
+  Prezentacja plakatu projektu
+</LinkCard>
+<LinkCard
+  title="Raport"
+  href="/larvixon-documentation/pl/02-university/documents/report"
+>
+  Raport podsumowujący implementację i wyniki projektu LarvixON
+</LinkCard>
+<LinkCard
+  title="Dokumentacja"
+  href="/larvixon-documentation/pl/02-university/documents/documentation"
+>
+  Szczegółowa dokumentacja techniczna projektu LarvixON
 </LinkCard>
