--- a/src/content/docs/en/02-university/documents/documentation.mdx
+++ b/src/content/docs/en/02-university/documents/documentation.mdx
@@ -1,6 +1,6 @@
 ---
-title: Report
-description: ZPI project report
+title: Documentation
+description: ZPI project documentation
 ---
 
 import { Aside } from "@astrojs/starlight/components";
@@ -8,9 +8,9 @@ import { Aside } from "@astrojs/starlight/components";
 <Aside type="tip">This document is only in Polish!</Aside>
 
 <iframe
-  src="/larvixon-documentation/zpi-report/main.pdf"
+  src="/larvixon-documentation/zpi-documentation/main.pdf"
   style="width:100%; height:100vh; min-height:600px; border:1px solid var(--sl-color-border); border-radius:8px;"
-  title="ZPI Report"
+  title="ZPI Documentation"
 ></iframe>
 
-[Download PDF](/larvixon-documentation/zpi-report/main.pdf)
+[Download PDF](/larvixon-documentation/zpi-documentation/main.pdf)
